# InOri

./: .envrc  .gitignore  .harper-dictionary.txt  AGENTS.md  Cargo.toml  MEMO.md  justfile  renovate.json  rustfmt.toml
.cargo/: config.toml
.github/workflows/: ci-tests.yml
avxl/: Cargo.toml
avxl/src/: avif.rs  despeckle.rs  fs.rs  imagemagick.rs  jxl.rs  main.rs  runner.rs  tool.rs
busnaguri/: Cargo.toml
busnaguri/src/: main.rs
coruma/: Cargo.toml  README.md
coruma/src/: lib.rs
crates/ino_color/: Cargo.toml  README.md
crates/ino_color/src/: has_colors.rs  lib.rs
crates/ino_iter/: Cargo.toml
crates/ino_iter/src/: lib.rs
crates/ino_path/: Cargo.toml
crates/ino_path/src/: absolute_path.rs  is_executable.rs  lib.rs
crates/ino_result/: Cargo.toml
crates/ino_result/src/: lib.rs
crates/ino_tap/: Cargo.toml
crates/ino_tap/src/: lib.rs
crates/ino_tracing/: Cargo.toml
crates/ino_tracing/src/: lib.rs
dbulunr/: Cargo.toml
dbulunr/src/: main.rs
derputils/: Cargo.toml  README.md
derputils/src/: fs.rs  lib.rs
fujinoka/: Cargo.toml
fujinoka/src/: fuji.rs  lib.rs  main.rs  soil.rs  wind.rs
imgo/: Cargo.toml  TASK.md  TomatoScramble.java
imgo/examples/: gen_test_png.rs
imgo/src/: fs.rs  img.rs  lib.rs  pipeline.rs  tomato.rs
imgo/src/transcoder/: avif.rs  jxl.rs  magick.rs  mod.rs  tomato.rs
latoori/: Cargo.toml
latoori/src/: main.rs  mime.rs
latoori/src/asset/: 404.html  mod.rs
libs/ino_tracing/: Cargo.toml
libs/ino_tracing/src/: lib.rs
linkeepr/: Cargo.toml  a.nix  scheme.json
linkeepr/src/: lib.rs  main.rs  plan_schema.rs  template.rs
linkeepr/tests/: test.rs
lny/: BUGS.md  Cargo.toml  README.md
lny/src/: blueprint.rs  executor.rs  main.rs  step.rs  template.rs
lny/tests/: test_cli.rs
lumire/: Cargo.toml  new.json
lumire/src/: blueprint.rs  executor.rs  main.rs  manifest.rs  plan.rs  template.rs
lumire/tests/: test_cli.rs
noah/: Cargo.toml  NOTICE  README.md  package.nix  shell.nix
noah/.github/workflows/: cleanup.yaml
noah/src/: checks.rs  clean.rs  cli.rs  commands.rs  completion.rs  deploy.rs  generations.rs  handy.rs  installable.rs  interface.rs  lib.rs  logging.rs  main.rs  nixos.rs  update.rs  util.rs
pickit/: Cargo.toml
pickit/src/: main.rs  pic.rs
rpgdemake/: Cargo.toml  README.md
rpgdemake/bench/: Cargo.toml
rpgdemake/bench/src/: main.rs
rpgdemake/src/: asset.rs  finder.rs  game.rs  key.rs  lore.rs  main.rs  project.rs  resource.rs  task.rs  tasks.rs  walkdir.rs
rpgdemake/tests/: fixture.rs  integrate.rs  layout.rs  mv.rs  mz.rs
rpgdemake/tests/fixture/: Castle1.rpgmvo  Clouds.rpgmvp  System.json
syalp/: Cargo.toml  README.md
symfindme/: Cargo.toml
symfindme/src/: main.rs
