[workspace]
resolver = "2"
members = [
    "crates/*",
    "avxl",
    "coruma",
    "derputils",
    "rpgdemake",
]

[workspace.package]
authors = [ "MidAutumnMoon" ]
license = "GPL-3.0-or-later"
repository = "https://github.com/MidAutumnMoon/InOri"
edition = "2024"
rust-version = "1.85.0"

#
# Dependencies
#

[workspace.dependencies]
anyhow = { version = "1", features = [ "backtrace" ] }
clap = { version = "4", features = [ "derive", "cargo" ] }
itertools = "0"
rayon = "1"
tap = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }

ino_color = { path = "./crates/ino_color" }
ino_result = { path = "./crates/ino_result" }
ino_tracing = { path = "./crates/ino_tracing" }
ino_path = { path = "./crates/ino_path" }

#
# Profiles
#

[profile.release]
lto = "thin"
strip = "debuginfo"

[profile.perf]
inherits = "release"
debug = true
strip = false

#
# Lints
#

[workspace.lints.clippy]
all = "warn"
unwrap_used = "warn"
panic = "warn"
indexing_slicing = "warn"
unreachable = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_in_result = "warn"
doc_markdown = "warn"
