[workspace]
resolver = "2"
members = [
    "crates/*",
    "avxl",
    "busnaguri",
    "coruma",
    "derputils",
    "fujinoka",
    "lny",
    "rpgdemake",
]

[workspace.package]
authors = [ "MidAutumnMoon" ]
license = "GPL-3.0-or-later"
repository = "https://github.com/MidAutumnMoon/InOri"
edition = "2024"
rust-version = "1.88.0"

#
# Dependencies
#

[workspace.dependencies]
anyhow = "1"
assert_fs = "1"
clap = { version = "4", features = [ "derive", "cargo" ] }
itertools = "0"
rayon = "1"
rustix = { version = "1", features = [ "all-apis" ] }
serde = { version = "1", features = [ "derive" ] }
serde_json = "1"
tap = "1"
thiserror = "2"
tokio = { version = "1", features = [ "full" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [ "env-filter" ] }

ino_color = { path = "./crates/ino_color" }
ino_result = { path = "./crates/ino_result" }
ino_tracing = { path = "./crates/ino_tracing" }
ino_path = { path = "./crates/ino_path" }
ino_tap = { path = "./crates/ino_tap" }

#
# Profiles
#

[profile.release]
lto = "thin"
strip = "debuginfo"

[profile.perf]
inherits = "release"
debug = true
strip = false

#
# Lints
#

[workspace.lints.clippy]
all = { priority = -1, level = "warn" }
pedantic = { priority = -1, level = "warn" }
nursery = { priority = -1, level = "warn" }

cognitive_complexity = "allow"
literal_string_with_formatting_args = "allow"
missing_const_for_fn = "allow"
too_many_lines = "allow"

unwrap_used = "warn"
panic = "warn"
indexing_slicing = "warn"
unreachable = "warn"
undocumented_unsafe_blocks = "warn"
unwrap_in_result = "warn"
