[package]
name = "avxl"
version = "1.5.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
colour.workspace = true
ino_tracing.workspace = true
itertools.workspace = true
tap = "1.0.1"
tracing.workspace = true
