[package]
name = "avxl"
version = "1.5.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
ino_result.workspace = true
ino_tap.workspace = true
ino_tracing.workspace = true
itertools.workspace = true
tap.workspace = true
tracing.workspace = true
walkdir = "2.5.0"

[lints]
workspace = true
