[package]
name = "busnaguri"
version = "0.1.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
ino_tracing.workspace = true
serde_json.workspace = true
tap.workspace = true
tokio.workspace = true
tracing.workspace = true
zbus = { version = "5", default-features = false, features = ["tokio"] }

[lints]
workspace = true
