[package]
name = "derputils"
version = "6.2.0"
description = """\
    A set of utils which deserve questioning \
    what's purpose of their existence in the first place.\
    """
license.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

# Dependencies

[dependencies]
anyhow.workspace = true
arboard = { version = "3", default-features = false }
clap.workspace = true
ino_tracing.workspace = true
itertools = "0"
qrcode = { version = "0", features = ["svg"] }
tracing.workspace = true
uuid = { version = "1", features = ["v7"] }
