[package]
name = "derputils"
version = "8.0.0"
description = """\
    A set of utils which deserve questioning \
    what's purpose of their existence in the first place.\
    """
license.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[lib]

[dependencies]
anyhow.workspace = true
arboard = { version = "3", default-features = false }
clap.workspace = true
ino_tracing.workspace = true
is_executable = "1.0.4"
itertools.workspace = true
qrcode = { version = "0", features = ["svg"] }
tracing.workspace = true
uuid = { version = "1", features = ["v7"] }
