[package]
name = "derputils"
version = "9.0.0"
description = """\
    A set of utils which deserve questioning \
    what's purpose of their existence in the first place.\
    """
license.workspace = true
authors.workspace = true
edition.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
arboard = { version = "3", default-features = false }
clap.workspace = true
ino_tracing.workspace = true
qrcode = { version = "0", features = ["svg"] }
tracing.workspace = true
uuid = { version = "1", features = ["v7"] }

[lints]
workspace = true
