[package]
name = "imgo"
version = "0.1.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete = "4.5.65"
ino_color.workspace = true
ino_tracing.workspace = true
parking_lot = "0.12.5"
rayon.workspace = true
strum.workspace = true
tap.workspace = true
tracing.workspace = true
walkdir = "2.5.0"

[lints]
workspace = true
