[package]
name = "imgo"
version = "0.1.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]

[dependencies]
anyhow.workspace = true
clap.workspace = true
clap_complete = "4.5.65"
indicatif = "0.18.3"
ino_color.workspace = true
ino_path.workspace = true
ino_tracing.workspace = true
itertools.workspace = true
parking_lot = "0.12.5"
rayon.workspace = true
strum.workspace = true
tap.workspace = true
tempfile = "3.24.0"
tracing.workspace = true
walkdir = "2.5.0"

[lints]
workspace = true
