[package]
name = "latoori"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
axum = "0.7"
clap.workspace = true
ino_tracing.workspace = true
mimalloc.workspace = true
tokio.workspace = true
tracing.workspace = true

[dependencies."tower-http"]
version = "0.5"
features = [
    "trace"
]
