[package]
name = "linkeepr"
version = "0.1.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[lib]

[dependencies]
anyhow.workspace = true
clap.workspace = true
ino_result.workspace = true
ino_tracing.workspace = true
minijinja = "2.7.0"
same-file = "1.0.6"
serde.workspace = true
serde_json.workspace = true
tap.workspace = true
tracing.workspace = true
