[package]
name = "lny"
version = "0.1.0"
authors.workspace = true
license.workspace = true
repository.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
etcetera = "0.10.0"
ino_color.workspace = true
ino_path.workspace = true
ino_tap.workspace = true
ino_tracing.workspace = true
itertools.workspace = true
rand = "0.9.1"
serde.workspace = true
serde_json.workspace = true
serdev = "0.2.0"
tap.workspace = true
tracing.workspace = true

[dependencies.minijinja]
version = "2.10.2"
default-features = false
features = [
    "debug",
    "serde",
    "std_collections",
    "unicode",
]

[dev-dependencies]
assert_fs.workspace = true

[lints]
workspace = true
