[package]
name = "noah"
license = "EUPL-1.2"
repository = "https://github.com/MidAutumnMoon/InOri/noah"
description = "Yet Another Nix Helper"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
chrono = "0.4.39"
clap.workspace = true
clap-verbosity-flag = { version = "3.0.3", features = [ "tracing" ], default-features = false }
clap_complete = "4.5.8"
color-eyre = { default-features = false, features = [ "track-caller" ], version = "0.6.2" }
dix = "1.2.1"
elasticsearch-dsl = "0.4.19"
hostname = "0.4"
humantime = "2.1.0"
inquire = { default-features = false, version = "0.7", features = [ "crossterm" ] }
nix = { default-features = false, features = [ "fs", "user" ], version = "0.30.1" }
owo-colors = "4.0.0"
regex = "1.8.4"
reqwest = { default-features = false, features = [
  "rustls-tls-native-roots",
  "blocking",
  "json",
], version = "0.12.0" }
semver = "1.0.22"
serde = { features = [ "derive" ], version = "1.0.166" }
serde_json = "1.0.100"
subprocess = "0.2"
supports-hyperlinks = "3.0.0"
tempfile = "3.5.0"
textwrap = { features = [ "terminal_size" ], version = "0.16.0" }
thiserror = "2.0"
tracing = "0.1.40"
tracing-subscriber = { features = [ "env-filter", "registry", "std" ], version = "0.3.18" }

[dev-dependencies]
clap_mangen = "0.2.28"
proptest    = "1.6.0"
serial_test = "3.2.0"
