[package]
name = "rpgdemake"
version = "2.2.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true
clap.workspace = true
hex = "0.4.3"
ino_tracing.workspace = true
itertools = "0"
rayon.workspace = true
rlimit = "0"
serde_json.workspace = true
tracing.workspace = true
walkdir = "2"

[dev-dependencies]
assert_fs.workspace = true
dir-diff = "0.3.3"

[lints]
workspace = true
