[package]
name = "symfindme"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
ino_tracing.workspace = true
is_executable = "1.0.4"
termcolor = "1.4.1"
tracing.workspace = true
