[package]
name = "ino_color"
version = "3.0.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "README.md"
description = "A output coloring crate with limited functionality, limit platform support and limited allocations."
categories = [ "command-line-interface" ]

[dependencies]

[lints]
workspace = true

# vim: set nowrap:
