[package]
name = "ino_path"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]

[dependencies]
rustix.workspace = true
tap.workspace = true
thiserror.workspace = true

[dev-dependencies]
assert2 = "0.3.16"
assert_fs.workspace = true

[lints]
workspace = true
